@@ -54,7 +54,7 @@ public:
 	Game_clock(Time_queue *tq) : tqueue(tq), hour(6), minute(0), day(0),
 			light_source_level(0), dungeon(255), time_rate(1),
 			overcast(0), fog(0), transition(0), old_special_light(false),
-			was_overcast(false), was_foggy(false)
+			was_overcast(false), was_foggy(false), old_light_level(0)
 		{ }
 	int get_hour()
 		{ return hour; }
@@ -84,6 +84,7 @@ public:
 		{
 		overcast = fog = 0;
 		was_overcast = was_foggy = old_special_light = false;
+		dungeon = 255;
 		if (transition)
 			delete transition;
 		transition = 0;
